style: equals 재정의